# discord-arXiv-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  README_DEVELOPMENT.md  README_PARSER.md  README_UV_POETRY.md  debug_query.py  main.py  pyproject.toml  pyproject.toml.backup  railway.scheduler.toml  railway.toml  requirements.txt  test_current_behavior.py  test_end_to_end.py  test_endpoint.py  test_wildcard.py  tools.py  vercel.json
.github/workflows/: ci.yml  test.yml
docs/: poetry-vs-uv.md  query-syntax-specification-v2.md  query-syntax-specification.md  refactoring-plan.md  uv-vs-poetry-2024.md
scripts/: README.md  check_commands.py  cleanup_all_commands.py  delete_commands.py  delete_old_commands.py  export_requirements.sh  list_commands.py  register_commands.py  register_help_command.py  setup_dev.sh  update_commands.py
src/: __init__.py  main.py  query_interface.py  scheduler.py  slash_bot.py  tools.py  webhook_server.py
src/query_parser/: __init__.py  constants.py  control_data.py  parentheses_processor.py  parser.py  query_builder.py  query_parts.py  token_converter.py  tokenizer.py  transformer.py  types.py  validator.py
tests/test_query_parser/: __init__.py  test_arxiv_compatibility.py  test_date_parsing.py  test_edge_cases.py  test_integration.py  test_operators.py  test_parentheses.py  test_parser.py  test_phase2_features.py  test_phase3_features.py  test_tokenizer.py  test_transformer.py  test_validator.py
