[tool.poetry]
name = "arxiv-discord-bot"
version = "0.1.0"
description = "Discord bot for searching and sharing arXiv research papers"
authors = ["naniwazu <sakuyakonohana39@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
arxiv = "^2.0.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pynacl = "^1.5.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
arxiv-bot = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "S101",  # use of assert detected (OK in tests)
    "ANN201", # missing return type annotation
    "ANN204", # missing return type annotation for special method
    "FBT001", # boolean positional arg in function definition
    "FBT002", # boolean default positional arg in function definition
    "FBT003", # boolean positional value in function call
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is OK in tests
    "ANN",   # annotations not required in tests
    "D",     # docstrings not required in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"