[project]
name = "arxiv-discord-bot"
version = "0.1.0"
description = "Discord bot for searching and sharing arXiv research papers"
authors = [
    {name = "naniwazu", email = "sakuyakonohana39@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.3.2",
    "arxiv>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pynacl>=1.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
arxiv-bot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "S101",  # use of assert detected (OK in tests)
    "ANN201", # missing return type annotation
    "ANN204", # missing return type annotation for special method
    "FBT001", # boolean positional arg in function definition
    "FBT002", # boolean default positional arg in function definition
    "FBT003", # boolean positional value in function call
    "C901",  # function is too complex
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value used in comparison
    "S104",  # possible binding to all interfaces (OK for web server)
    "PLW0603", # using global statement (OK in specific cases)
    "TC002", # move third-party import into type-checking block
    "TRY300", # consider moving statement to else block
    "BLE001", # do not catch blind exception
    "D413",  # missing blank line after last section
    "D415",  # first line should end with period
    "UP035", # deprecated typing imports (handled by auto-fix)
    "E501",  # line too long (some acceptable for clarity)
    "DTZ007", # naive datetime usage (acceptable for this use case)
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is OK in tests
    "ANN",   # annotations not required in tests
    "D",     # docstrings not required in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"