[project]
name = "arxiv-discord-bot"
version = "0.1.0"
description = "Discord bot for searching and sharing arXiv research papers"
authors = [
    {name = "naniwazu", email = "sakuyakonohana39@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.3.2",
    "arxiv>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pynacl>=1.5.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
arxiv-bot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is OK in tests
    "ANN",     # annotations not required in tests
    "D",       # docstrings not required in tests
    "PLR2004", # magic values are OK in tests
    "F841",    # unused variables OK in tests (for crash testing)
    "ERA001",  # commented code OK in tests
]
"src/webhook_server.py" = [
    "PLC0415", # conditional imports are needed for optional scheduler module
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]